--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1377,26 +1377,27 @@
     }
 
     .partnerCard {
-        padding: 1rem;
-        min-width: 45%;
-        max-width: 48%;
-        flex: 1 1 45%;
+        padding: 0;
+        min-width: 0;
+        max-width: none;
+        flex: 1 1 calc(50% - 0.5rem);
+        width: calc(50% - 0.5rem);
     }
 
     .partnerLogoWrapper {
         min-height: 60px;
-        padding: 1rem 1rem 0.75rem;
+        padding: 1rem 0.75rem 0.75rem;
     }
 
     .partnerLogo,
     .partnerLogoDark {
-        height: 35px;
-        max-width: 100px;
+        height: 32px;
+        max-width: 90px;
     }
 
     .partnerName {
-        font-size: 0.75rem;
-        padding: 0.625rem 0.5rem;
+        font-size: 0.7rem;
+        padding: 0.5rem 0.375rem;
     }
 
     .coursesGrid,
